--- a/aula 02/cardapio.html
+++ b/aula 02/cardapio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Formulário de escolha de cardápio</title>
+	<link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
